[package]
name = "cmp-manager"
version = "0.0.1" # https://crates.io/crates/cmp-manager
edition = "2021"
rust-version = "1.62"
publish = true
description = "Rust comparison manager"
repository = "https://github.com/gyuho/cmp-manager"
readme = "README.md"
license = "Apache-2.0"

[dependencies]

[dev-dependencies]
